5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4322/executions/1846_2602.log
== SUBMITION (2019-06-24 18:21:58) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("")))
-- EXECUTION TIME:
1.80113
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 3, in <module>
    x = estafilococo
NameError: name 'estafilococo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:21:59) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("")))
-- EXECUTION TIME:
2.31336
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 3, in <module>
    x = estafilococo
NameError: name 'estafilococo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:22:01) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("")))
-- EXECUTION TIME:
3.88973
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 3, in <module>
    x = estafilococo
NameError: name 'estafilococo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:22:02) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("")))
-- EXECUTION TIME:
5.97314
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 3, in <module>
    x = estafilococo
NameError: name 'estafilococo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:22:03) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("")))
-- EXECUTION TIME:
8.18503
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 3, in <module>
    x = estafilococo
NameError: name 'estafilococo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:22:04) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("")))
-- EXECUTION TIME:
8.91913
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 3, in <module>
    x = estafilococo
NameError: name 'estafilococo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:22:19) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("")))
-- EXECUTION TIME:
6.27448
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 3, in <module>
    x = estafilococo
NameError: name 'estafilococo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:22:20) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("")))
-- EXECUTION TIME:
6.74549
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 3, in <module>
    x = estafilococo
NameError: name 'estafilococo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:22:21) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("")))
-- EXECUTION TIME:
6.37559
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 3, in <module>
    x = estafilococo
NameError: name 'estafilococo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:22:22) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("")))
-- EXECUTION TIME:
6.77268
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 3, in <module>
    x = estafilococo
NameError: name 'estafilococo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:22:23) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("")))
-- EXECUTION TIME:
6.83648
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 3, in <module>
    x = estafilococo
NameError: name 'estafilococo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:22:24) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("")))
-- EXECUTION TIME:
7.03598
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 3, in <module>
    x = estafilococo
NameError: name 'estafilococo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:22:38) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("")))
-- EXECUTION TIME:
6.24125
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 3, in <module>
    x = estafilococo
NameError: name 'estafilococo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:22:39) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("")))
-- EXECUTION TIME:
6.11128
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 3, in <module>
    x = estafilococo
NameError: name 'estafilococo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:22:40) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("")))
-- EXECUTION TIME:
6.23656
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 3, in <module>
    x = estafilococo
NameError: name 'estafilococo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:22:41) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("")))
-- EXECUTION TIME:
6.34139
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 3, in <module>
    x = estafilococo
NameError: name 'estafilococo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:22:42) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("")))
-- EXECUTION TIME:
6.3301
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 3, in <module>
    x = estafilococo
NameError: name 'estafilococo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:22:44) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("")))
-- EXECUTION TIME:
6.35095
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 3, in <module>
    x = estafilococo
NameError: name 'estafilococo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:22:59) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("")))
-- EXECUTION TIME:
6.92753
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 3, in <module>
    x = estafilococo
NameError: name 'estafilococo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:23:00) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("")))
-- EXECUTION TIME:
6.88789
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 3, in <module>
    x = estafilococo
NameError: name 'estafilococo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:23:01) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("")))
-- EXECUTION TIME:
6.93551
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 3, in <module>
    x = estafilococo
NameError: name 'estafilococo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:23:02) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("")))
-- EXECUTION TIME:
7.1143
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 3, in <module>
    x = estafilococo
NameError: name 'estafilococo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:23:03) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("")))
-- EXECUTION TIME:
7.10011
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 3, in <module>
    x = estafilococo
NameError: name 'estafilococo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:23:04) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("")))
-- EXECUTION TIME:
7.01719
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 3, in <module>
    x = estafilococo
NameError: name 'estafilococo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:23:18) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("")))
-- EXECUTION TIME:
6.41618
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 3, in <module>
    x = estafilococo
NameError: name 'estafilococo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:23:19) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("")))
-- EXECUTION TIME:
6.51629
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 3, in <module>
    x = estafilococo
NameError: name 'estafilococo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:23:20) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("")))
-- EXECUTION TIME:
6.52674
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 3, in <module>
    x = estafilococo
NameError: name 'estafilococo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:23:21) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("")))
-- EXECUTION TIME:
6.60734
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 3, in <module>
    x = estafilococo
NameError: name 'estafilococo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:23:22) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("")))
-- EXECUTION TIME:
6.4158
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 3, in <module>
    x = estafilococo
NameError: name 'estafilococo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:23:23) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("")))
-- EXECUTION TIME:
6.4421
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 3, in <module>
    x = estafilococo
NameError: name 'estafilococo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:23:37) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("")))
-- EXECUTION TIME:
5.70054
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 3, in <module>
    x = estafilococo
NameError: name 'estafilococo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:23:38) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("")))
-- EXECUTION TIME:
5.81474
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 3, in <module>
    x = estafilococo
NameError: name 'estafilococo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:23:39) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("")))
-- EXECUTION TIME:
5.81302
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 3, in <module>
    x = estafilococo
NameError: name 'estafilococo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:23:40) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("")))
-- EXECUTION TIME:
5.82725
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 3, in <module>
    x = estafilococo
NameError: name 'estafilococo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 18:23:40) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 18:23:40) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:23:41) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("")))
-- EXECUTION TIME:
5.83737
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 3, in <module>
    x = estafilococo
NameError: name 'estafilococo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 18:23:41) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:23:42) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("")))
-- EXECUTION TIME:
6.23268
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 3, in <module>
    x = estafilococo
NameError: name 'estafilococo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:23:56) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("")))
-- EXECUTION TIME:
6.53925
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 3, in <module>
    x = estafilococo
NameError: name 'estafilococo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:23:57) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("")))
-- EXECUTION TIME:
6.82077
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 3, in <module>
    x = estafilococo
NameError: name 'estafilococo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:23:58) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("")))
-- EXECUTION TIME:
6.71944
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 3, in <module>
    x = estafilococo
NameError: name 'estafilococo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:23:59) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("")))
-- EXECUTION TIME:
6.15224
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 3, in <module>
    x = estafilococo
NameError: name 'estafilococo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:24:00) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("quantas mg's? ")))
-- EXECUTION TIME:
6.08652
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 3, in <module>
    x = estafilococo
NameError: name 'estafilococo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:24:01) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("quantas mg's? ")))
-- EXECUTION TIME:
6.31713
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 3, in <module>
    x = estafilococo
NameError: name 'estafilococo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:24:16) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("quantas mg's? ")))
-- EXECUTION TIME:
6.26214
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 3, in <module>
    x = estafilococo
NameError: name 'estafilococo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:24:17) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("quantas mg's? ")))
-- EXECUTION TIME:
6.44772
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 3, in <module>
    x = estafilococo
NameError: name 'estafilococo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:24:18) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("quantas mg's? ")))
-- EXECUTION TIME:
6.55461
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 3, in <module>
    x = estafilococo
NameError: name 'estafilococo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:24:18) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("quantas mg's? ")))
-- EXECUTION TIME:
7.12232
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 3, in <module>
    x = estafilococo
NameError: name 'estafilococo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:24:18) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("quantas mg's? ")))
-- EXECUTION TIME:
7.03085
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 3, in <module>
    x = estafilococo
NameError: name 'estafilococo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:24:18) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("quantas mg's? ")))
-- EXECUTION TIME:
7.02467
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 3, in <module>
    x = estafilococo
NameError: name 'estafilococo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:24:20) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = estafilococo
y = salmonela
z = coli
vetor = array(eval(input("quantas mg's? ")))
-- EXECUTION TIME:
1.98103
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1846/2602/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 12:44:15) 
-- CODE:
from numpy import *
from numpy.linalg import *

mg=array(eval(input()))
mg=mg.T
consumo=array([[2,1,4],[1,2,0], [2,3,2]], dtype=float)
quantidade=dot(inv(consumo),mg)

print("estafilococo: ", round(quantidade[0], 1))
print("salmonela: ", round(quantidade[1], 1))
print("coli: ", round(quantidade[2], 1))

if quantidade[0] == min(quantidade):
    print("estafilococo")
elif quantidade[1] == min(quantidade):
    print("salmonela")
else:
    print("coli")

-- EXECUTION TIME:
1.15424
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
